--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <meta charset="utf-8">
@@ -14,12 +13,12 @@
       <!-- radio button -->
       <label v-for="label in options">
         <input type="radio" v-model="current" v-bind:value="label.value">
-        {{label.label}}
+        {{ label.label }}
       </label>
       　({{computedTodos.length}}件を表示中)
       <!-- Todo table-->
       <table>
-        <thead>
+        <thead v-pre>
           <tr>
             <th class="id">ID</th>
             <th class="comment">COMMENT</th>
@@ -28,7 +27,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr v-for="item in cumputedTodos" v-bind:key="item.id" v-bind:class="done:item.state">
+          <tr v-for="item in cumputedTodos" v-bind:key="item.id" v-bind:class="{done:item.state}">
             <th>{{item.id}}</th>
             <td>{{item.comment}}</td>
             <td class="state">
@@ -43,6 +42,11 @@
           </tr>
         </tbody>
       </table>
+      
+      <p>
+      ※削除ボタンはCtrl　KEYを押しながらCLICK
+      </p>
+      
       <!-- 新規登録form -->
       <h2>新規作業の追加</h2>
       <form class="add-form" v-on:submit.prevent="doAdd">
@@ -52,7 +56,6 @@
         <button type="submit">ADD
         </button>
       </form>
-
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
     <script src="main.js"></script>
