--- a/learnWatchers/learnWatchers.html
+++ b/learnWatchers/learnWatchers.html
@@ -1,12 +1,7 @@
-<script src="https://unpkg.com/vue"></script>
-
 <div id = "watch-example">
-<P>
-  Ask a yes/no question : 
-  <input v-model = "question">
-</P>
-<P>
-{{ answer }}
-</P>
-
+  <P>
+    Ask a yes/no question : 
+    <input v-model = "question">
+  </P>
+  <P> {{ answer }}</P>
 </div>
